--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <div class="content-wrap">
                 <h1>Christ Watat</h1>
-                <h2>Student, Msc. Geoinformatik</h2>
+                <h2>Student, Bsc Geografie</h2>
 
                 <p>Mein Ziel ist es, meine Fähigkeiten in der Frontend-Entwicklung zu schärfen, so dass ich in der Lage bin, strukturierte, funktionsreiche Websiten zu entwickeln und dabei sicherzustellen, dass alle Anforderungen erfüllt und Unternehmensrichtlinien und -verfahren befolgt werden, sowie qualitativ hochwertigen Code zu erstellen.</p>
                 <p>Ein weiteres Ziel wäre es, mit Projektmanagern und Kreativteams zusammenzuarbeiten, um originelle, effiziente Lösungen zu liefern und Kunden zu beraten oder mein Fachwissen zur Verfügung zu stellen.</p>
